[package]
name = "surge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
cpal = { version = "0.17.3", features = ["jack"] }
crossterm = "0.29.0"
num = "0.4.3"
oneshot = "0.2.1"
radiobrowser = "0.6.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["blocking"] }
ringbuf = "0.5.0"
rtrb = "0.3.4"
symphonia = { version = "0.6.0", features = ["all"] }
zerocopy = { version = "0.8.48", features = ["derive", "std", "zerocopy-derive"] }
